# SkitBox

./: .gitignore  LICENSE  README.md  START_SkitBox_WINDOWS.bat  STOP_SkitBox_WINDOWS.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  first-run-feedback.yml  funny_output.yml
.github/workflows/: tests.yml
docs/: PYTHON_FRICTION_DECISION.md  RELEASE_CHECKLIST.md  ROADMAP.md  TESTER_FEEDBACK.md  TESTER_SCRIPT.md
docs/demo-memory-scenes/: 01-kitchen-bad-plan.txt  02-living-room-rivalry.txt  03-landing-guest-star.txt  04-kitchen-finale.txt  05-living-room-misunderstanding.txt  06-landing-bottle.txt  README.md
docs/demo-room-scenes/: 01-kitchen-bottle-episode.txt  02-kitchen-misunderstanding.txt  03-living-room-rivalry.txt  04-landing-guest-star.txt  05-kitchen-prompt-saucer.txt  06-living-room-missing-prop.txt  README.md
scripts/: make_release_zip.ps1  sample_episodes.py  sample_memory.py  stop_dev_processes.ps1  verify_release_zip.ps1
sitcom_engine_app/: __init__.py  app.py  engine.py  storage.py
sitcom_engine_app/seeds/: default_show.json  templates.json
sitcom_engine_app/static/: app.css  app.js
sitcom_engine_app/templates/: index.html
tests/: test_app_smoke.py  test_engine.py  test_release_scripts.py  test_static_assets.py  test_storage.py
