[project]
name = "skitbox"
version = "0.3.2"
description = "Local-first skit generator for tiny sitcoms from weird ideas."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SkitBox" }]
dependencies = []

[project.scripts]
skitbox = "sitcom_engine_app.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
